fix;Fixes a style issue for wrapping new lines in span objects

--- a/src/components/info-panel/trace-details/trace-details.scss
+++ b/src/components/info-panel/trace-details/trace-details.scss
@@ -127,6 +127,7 @@
           height: 100%;
           font-family: monospace;
           padding: 2px 5px;
+          white-space: pre-wrap ;
         }
       }
     }
